# octopus-dash

./: .gitignore  MANIFEST.in  README.md  db.sqlite3  generate_actions.py  index.html  manage.py  registry.txt  requirements.txt  requirmenets.txt  seed_data.py  setup.cfg  tailwind.config.js
DjangoDashboard/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_post_category.py  0002_simplebook_contentimage.py  0003_alter_simplebook_title.py  0003_post_category.py  0004_tag_post_tag.py
blog/templates/: index.html
contrib/: managers.py
core/: settings.py  urls.py
forms/: __init__.py  model_forms.py
home/: admin.py  apps.py  models.py
home/migrations/: 0001_initial.py  0002_appconfig_modelconfig.py  0003_remove_modelconfig_app_delete_appconfig_and_more.py
logs/: request_status.json
octopusDash/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
octopusDash/context/: context_managers.py
octopusDash/core/: __init__.py  forms.py  model_registry.py  permissions.py  urls.py  views.py
octopusdash/: admin.py  conf.py  context.py  exceptions.py  fields.py  forms.py  middleware.py  models.py  octopusdash_views.py  registry.py  urls.py  utils.py  views.py  views_mixin.py
orders/: admin.py  models.py
products/: admin.py  models.py
projects/: admin.py  models.py
registry/: admin.py
stores/: admin.py  models.py
templatetags/: octopusdash_tags.py
urls/: app_urls.py
views/: admin.py  app_views.py  model_views.py  views_mixin.py
(+214 files in other folders)
