[metadata]
name = octopusdash
version = 0.1.0
author = Hussein Naeem
author_email = husseinnaeemsec@email.com
description = Modern open-source Django admin dashboard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/husseinnaeemsec/octopusdash
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=4.0
    # any other dependencies you need

[options.package_data]
* = *.html, *.css, *.js, *.svg, *.json
